--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     real-time hazard reports, requests for help, and offers of assistance during disasters.</p>
 
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:support@blorptech.com">support@blorptech.com</a><br>
+    <p>Email: <a href="mailto:info@blorptech.com">support@blorptech.com</a><br>
        Address: 1621 Central Ave, Cheyenne, WY 82001-4531, USA</p>
 
     <h2>Legal</h2>
