--- a/privacy.html
+++ b/privacy.html
@@ -17,6 +17,6 @@
 <h2>Use of Data</h2>
 <p>We use this data to display real-time reports, provide notifications, and improve reliability.</p>
 <h2>Contact</h2>
-<p>Questions? Email <a href="mailto:support@blorptech.com">support@blorptech.com</a>.</p>
+<p>Questions? Email <a href="mailto:info@blorptech.com">support@blorptech.com</a>.</p>
 </body>
 </html>
