--- a/index.html
+++ b/index.html
@@ -5,36 +5,131 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Blorp Tech LLC</title>
   <style>
-    body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-           margin:0; line-height:1.5; color:#111; background:#fafafa; }
-    header { text-align:center; padding:60px 16px; background:#f7f7f7; }
-    h1 { font-size:28px; margin:0; }
-    main { max-width:800px; margin:0 auto; padding:24px; background:#fff; border-radius:12px; box-shadow:0 2px 6px rgba(0,0,0,0.05); }
-    footer { text-align:center; color:#666; font-size:14px; margin:40px 0; }
-    a { color:#0366d6; text-decoration:none; }
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      margin: 0;
+      line-height: 1.6;
+      color: #111;
+      background: #f5f5f5;
+    }
+    header {
+      text-align: center;
+      padding: 60px 20px;
+      background: #f0f0f0;
+    }
+    h1 {
+      font-size: 32px;
+      margin: 0 0 10px;
+    }
+    h2 {
+      margin-top: 40px;
+      font-size: 22px;
+    }
+    main {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 30px;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+    }
+    p, li {
+      font-size: 17px;
+    }
+    a {
+      color: #0366d6;
+      text-decoration: none;
+    }
+    footer {
+      text-align: center;
+      color: #666;
+      font-size: 14px;
+      margin: 40px 0;
+    }
   </style>
 </head>
+
 <body>
   <header>
     <h1>Blorp Tech LLC</h1>
-    <p>Building simple, reliable tools for community safety and disaster coordination.</p>
+    <p style="font-size:20px; margin:6px 0;"><strong>Making complexity simple.</strong></p>
+    <p>Simple, reliable tools for community safety and disaster coordination.</p>
   </header>
+
   <main>
-    <h2>About</h2>
-    <p>Blorp Tech LLC is a U.S.-based software company developing applications that strengthen community
-    resilience and emergency response. Our flagship app, <strong>Disaster Help</strong>, enables people to share
-    real-time hazard reports, requests for help, and offers of assistance during disasters.</p>
+    <h2>About Us</h2>
+    <p>
+      Blorp Tech LLC is a U.S.-based software company developing applications that strengthen
+      community resilience and emergency response. Our flagship app, <strong>Disaster Help</strong>,
+      enables people to share real-time hazard reports, requests for help, and offers of assistance
+      during disasters.
+    </p>
+    <p>
+      We focus on building technology that is clear, dependable, and easy to use — especially in
+      high-stress, low-signal environments.
+    </p>
+
+    <h2>Our Approach</h2>
+
+    <h3>Radical Simplicity</h3>
+    <p>
+      Simplicity isn’t a design choice, it’s a moral choice. In emergencies, every second counts.
+      Every extra button, every hidden setting, every confusing screen steals precious time.
+      We obsess over reducing friction until what remains feels effortless.
+    </p>
+
+    <h3>Real-World Reliability</h3>
+    <p>
+      We build for reality, not conference room demos. Our tools must operate in low-signal,
+      low-power, low-bandwidth, high-stress environments. If a feature fails in the real world,
+      it doesn’t exist.
+    </p>
+
+    <h3>Human-Centered Design</h3>
+    <p>
+      We design for people, not systems. For civilians under stress, for responders making rapid
+      decisions, for volunteers doing their best with limited tools. We honor their courage by
+      building technology that respects their time, attention, and humanity.
+    </p>
+
+    <h3>Operational Clarity</h3>
+    <p>
+      When everything goes wrong at once, clarity becomes a lifeline. Our products turn fragmented
+      information into simple, real-time understanding. The right data, at the right moment, in the
+      right form.
+    </p>
+
+    <h2>Disaster Help</h2>
+    <p>
+      Disaster Help is our flagship app — a simple, real-time tool that helps communities stay
+      connected during emergencies. Users can request help, report hazards, and offer assistance,
+      while responders gain immediate shared awareness.
+    </p>
+    <p>
+      Disaster Help bridges civilian input with responder systems, including TAK, to improve
+      operational coordination.
+    </p>
+    <p>
+      <strong>Request a pilot or demo:</strong><br>
+      <a href="mailto:info@blorptech.com">info@blorptech.com</a>
+    </p>
 
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:info@blorptech.com">support@blorptech.com</a><br>
-       Address: 1621 Central Ave, Cheyenne, WY 82001-4531, USA</p>
+    <p>
+      Email: <a href="mailto:info@blorptech.com">info@blorptech.com</a><br>
+      Address: 1621 Central Ave, Cheyenne, WY 82001-4531, USA
+    </p>
 
     <h2>Legal</h2>
     <p><a href="/privacy.html">Privacy Policy</a></p>
   </main>
+
   <footer>
     © <span id="year"></span> Blorp Tech LLC — All Rights Reserved
   </footer>
-  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
