Added demo link index.html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
     p, li {
       font-size: 17px;
     }
+    h3 {
+      margin-top: 24px;
+      font-size: 19px;
+    }
     a {
       color: #0366d6;
       text-decoration: none;
@@ -109,6 +113,13 @@
       Disaster Help bridges civilian input with responder systems, including TAK, to improve
       operational coordination.
     </p>
+
+    <p>
+      <a href="https://youtube.com/shorts/l1ABxu-5TpQ?si=FFPUaOf4z54eLKtw" target="_blank">
+        Watch the 2-minute Disaster Help demo →
+      </a>
+    </p>
+
     <p>
       <strong>Request a pilot or demo:</strong><br>
       <a href="mailto:info@blorptech.com">info@blorptech.com</a>
