--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
 <body>
   <header>
     <h1>Blorp Tech LLC</h1>
+
+    <!-- NEW ACRONYM LINE ADDED HERE -->
+    <p style="font-size:15px; margin:4px 0; color:#444;">
+      <strong>B.L.O.R.P — Bridging Local Observations & Response Platform</strong>
+    </p>
+
     <p style="font-size:20px; margin:6px 0;"><strong>Making complexity simple.</strong></p>
     <p>Simple, reliable tools for community safety and disaster coordination.</p>
   </header>
@@ -64,7 +70,13 @@
     <h2>About Us</h2>
     <p>
       Blorp Tech LLC is a U.S.-based software company developing applications that strengthen
-      community resilience and emergency response. Our flagship app, <strong>Disaster Help</strong>,
+      community resilience and emergency response. Our name comes from the
+      <strong>B.L.O.R.P. framework — Bridging Local Observations & Response Platform</strong>,
+      which guides how we design systems that connect community-reported information with
+      emergency operations.
+    </p>
+    <p>
+      Our flagship app, <strong>Disaster Help</strong>,
       enables people to share real-time hazard reports, requests for help, and offers of assistance
       during disasters.
     </p>
@@ -144,3 +156,4 @@
   </script>
 </body>
 </html>
+
