--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Blorp Tech LLC</title>
+
+  <meta name="description" content="Blorp Tech builds simple, reliable software for disaster response and community coordination. Makers of Disaster Help.">
+
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
@@ -12,38 +15,54 @@
       color: #111;
       background: #f5f5f5;
     }
+
     header {
       text-align: center;
       padding: 60px 20px;
       background: #f0f0f0;
     }
+
     h1 {
       font-size: 32px;
-      margin: 0 0 10px;
+      margin: 0 0 8px;
     }
+
     h2 {
-      margin-top: 40px;
+      margin-top: 48px;
       font-size: 22px;
     }
+
+    h3 {
+      margin-top: 28px;
+      font-size: 19px;
+    }
+
     main {
       max-width: 900px;
       margin: 40px auto;
-      padding: 30px;
+      padding: 36px;
       background: #fff;
       border-radius: 12px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.05);
     }
+
     p, li {
       font-size: 17px;
     }
-    h3 {
-      margin-top: 24px;
-      font-size: 19px;
+
+    ul {
+      padding-left: 20px;
     }
+
     a {
       color: #0366d6;
       text-decoration: none;
     }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
     footer {
       text-align: center;
       color: #666;
@@ -54,106 +73,137 @@
 </head>
 
 <body>
-  <header>
-    <h1>Blorp Tech LLC</h1>
 
-    <!-- NEW ACRONYM LINE ADDED HERE -->
-    <p style="font-size:15px; margin:4px 0; color:#444;">
-      <strong>B.L.O.R.P — Bridging Local Observations & Response Platform</strong>
-    </p>
+<header>
+  <h1>Blorp Tech LLC</h1>
 
-    <p style="font-size:20px; margin:6px 0;"><strong>Making complexity simple.</strong></p>
-    <p>Simple, reliable tools for community safety and disaster coordination.</p>
-  </header>
+  <p style="font-size:15px; margin:4px 0; color:#444;">
+    <strong>B.L.O.R.P. — Bridging Local Observations & Response Platform</strong>
+  </p>
 
-  <main>
-    <h2>About Us</h2>
-    <p>
-      Blorp Tech LLC is a U.S.-based software company developing applications that strengthen
-      community resilience and emergency response. Our name comes from the
-      <strong>B.L.O.R.P. framework — Bridging Local Observations & Response Platform</strong>,
-      which guides how we design systems that connect community-reported information with
-      emergency operations.
-    </p>
-    <p>
-      Our flagship app, <strong>Disaster Help</strong>,
-      enables people to share real-time hazard reports, requests for help, and offers of assistance
-      during disasters.
-    </p>
-    <p>
-      We focus on building technology that is clear, dependable, and easy to use — especially in
-      high-stress, low-signal environments.
-    </p>
+  <p style="font-size:20px; margin:8px 0;">
+    <strong>Making complexity simple.</strong>
+  </p>
 
-    <h2>Our Approach</h2>
+  <p>
+    Simple, reliable software for community safety, emergency response,
+    and disaster coordination — designed for real-world conditions.
+  </p>
+</header>
 
-    <h3>Radical Simplicity</h3>
-    <p>
-      Simplicity isn’t a design choice, it’s a moral choice. In emergencies, every second counts.
-      Every extra button, every hidden setting, every confusing screen steals precious time.
-      We obsess over reducing friction until what remains feels effortless.
-    </p>
+<main>
 
-    <h3>Real-World Reliability</h3>
-    <p>
-      We build for reality, not conference room demos. Our tools must operate in low-signal,
-      low-power, low-bandwidth, high-stress environments. If a feature fails in the real world,
-      it doesn’t exist.
-    </p>
+  <h2>About Blorp Tech</h2>
+  <p>
+    Blorp Tech LLC is a U.S.-based software company focused on strengthening
+    community resilience and emergency response through clarity-first design.
+  </p>
 
-    <h3>Human-Centered Design</h3>
-    <p>
-      We design for people, not systems. For civilians under stress, for responders making rapid
-      decisions, for volunteers doing their best with limited tools. We honor their courage by
-      building technology that respects their time, attention, and humanity.
-    </p>
+  <p>
+    Our work is guided by the <strong>B.L.O.R.P. framework — Bridging Local Observations & Response Platform</strong>.
+    During emergencies, the people closest to the problem often have the most valuable information,
+    yet that information rarely reaches responders in a usable form.
+  </p>
 
-    <h3>Operational Clarity</h3>
-    <p>
-      When everything goes wrong at once, clarity becomes a lifeline. Our products turn fragmented
-      information into simple, real-time understanding. The right data, at the right moment, in the
-      right form.
-    </p>
+  <p>
+    We build systems that bridge that gap — translating local, community-reported
+    observations into clear, actionable awareness for emergency operations,
+    without burdening users with complexity or requiring ideal conditions.
+  </p>
 
-    <h2>Disaster Help</h2>
-    <p>
-      Disaster Help is our flagship app — a simple, real-time tool that helps communities stay
-      connected during emergencies. Users can request help, report hazards, and offer assistance,
-      while responders gain immediate shared awareness.
-    </p>
-    <p>
-      Disaster Help bridges civilian input with responder systems, including TAK, to improve
-      operational coordination.
-    </p>
+  <h2>Who We Build For</h2>
+  <ul>
+    <li>Local and rural emergency managers</li>
+    <li>First responders and volunteer organizations</li>
+    <li>Communities affected by disasters with limited connectivity</li>
+    <li>Agencies seeking lightweight tools that complement existing systems</li>
+  </ul>
 
-    <p>
-      <a href="https://youtube.com/shorts/l1ABxu-5TpQ?si=FFPUaOf4z54eLKtw" target="_blank">
-        Watch the 2-minute Disaster Help demo →
-      </a>
-    </p>
+  <h2>Our Approach</h2>
 
-    <p>
-      <strong>Request a pilot or demo:</strong><br>
-      <a href="mailto:info@blorptech.com">info@blorptech.com</a>
-    </p>
+  <h3>Radical Simplicity</h3>
+  <p>
+    Simplicity is not an aesthetic choice — it is an operational requirement.
+    In emergencies, every unnecessary option, screen, or setting creates friction.
+    We intentionally limit scope to what matters most so tools remain usable under stress.
+  </p>
 
-    <h2>Contact</h2>
-    <p>
-      Email: <a href="mailto:info@blorptech.com">info@blorptech.com</a><br>
-      Address: 1621 Central Ave, Cheyenne, WY 82001-4531, USA
-    </p>
+  <h3>Real-World Reliability</h3>
+  <p>
+    We design for degraded conditions by default. Our systems are built to function
+    in low-bandwidth, low-power, and high-stress environments.
+    Features that cannot be relied upon in real-world conditions are intentionally excluded.
+  </p>
 
-    <h2>Legal</h2>
-    <p><a href="/privacy.html">Privacy Policy</a></p>
-  </main>
+  <h3>Human-Centered Design</h3>
+  <p>
+    We design for people, not systems — for civilians under stress,
+    responders making rapid decisions, and volunteers coordinating with limited information.
+    Our goal is technology that supports human judgment rather than competing with it.
+  </p>
 
-  <footer>
-    © <span id="year"></span> Blorp Tech LLC — All Rights Reserved
-  </footer>
+  <h3>Operational Clarity</h3>
+  <p>
+    When everything goes wrong at once, clarity becomes a lifeline.
+    Our products transform fragmented information into simple,
+    real-time understanding — the right data, in the right form, at the right moment.
+  </p>
 
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+  <h2>Disaster Help</h2>
+  <p>
+    <strong>Disaster Help</strong> is Blorp Tech’s flagship product — a lightweight,
+    real-time coordination app that enables communities to share critical information
+    during disasters while providing responders with structured situational awareness.
+  </p>
+
+  <p>
+    Users can request help, report hazards, and offer assistance through
+    simple, location-based inputs designed for use under stress.
+    On the responder side, Disaster Help bridges civilian reporting
+    with emergency operations systems, including compatibility with TAK environments.
+  </p>
+
+  <p>
+    <a href="https://youtube.com/shorts/l1ABxu-5TpQ?si=FFPUaOf4z54eLKtw" target="_blank" rel="noopener">
+      ▶ Watch the 2-minute Disaster Help demo
+    </a>
+  </p>
+
+  <h2>Pilots & Demos</h2>
+  <p>
+    We offer pilots and demonstrations for agencies, organizations,
+    and communities interested in evaluating Disaster Help for real-world use.
+  </p>
+
+  <p>
+    <strong>Request a pilot or demo:</strong><br>
+    <a href="mailto:info@blorptech.com">info@blorptech.com</a>
+  </p>
+
+  <h2>Contact</h2>
+  <p>
+    Email: <a href="mailto:info@blorptech.com">info@blorptech.com</a><br>
+    Address:<br>
+    Blorp Tech LLC<br>
+    1621 Central Ave<br>
+    Cheyenne, WY 82001-4531<br>
+    United States
+  </p>
+
+  <h2>Legal</h2>
+  <p>
+    <a href="/privacy.html">Privacy Policy</a>
+  </p>
+
+</main>
+
+<footer>
+  © <span id="year"></span> Blorp Tech LLC — All Rights Reserved
+</footer>
+
+<script>
+  document.getElementById('year').textContent = new Date().getFullYear();
+</script>
+
 </body>
 </html>
-
