--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Blorp Tech LLC</title>
+  <title>Blorp Tech</title>
 
   <meta name="description" content="Blorp Tech builds simple, reliable software for disaster response and community coordination. Makers of Disaster Help.">
 
