--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
     }
 
     .footer-logo {
-      width: 24px;
-      height: 24px;
-      opacity: 0.85;
-    }
+  width: 24px;
+  height: auto;
+  opacity: 0.85;
+}
 
     .footer-name {
       font-weight: 500;
@@ -98,7 +98,7 @@
 <body>
 
 <header>
-  <h1>Blorp Tech LLC</h1>
+  <h1>Blorp Tech</h1>
 
   <p style="font-size:15px; margin:4px 0; color:#444;">
     <strong>B.L.O.R.P. = Bridging Local Observations & Response Platform</strong>
@@ -118,7 +118,7 @@
 
   <h2>About Blorp Tech</h2>
   <p>
-    Blorp Tech LLC is a U.S.-based software company focused on strengthening
+    Blorp Tech is a U.S.-based software company focused on strengthening
     community resilience and emergency response through simplicity-first design.
   </p>
 
@@ -227,11 +227,11 @@
       alt="Blorp Tech"
       class="footer-logo"
     />
-    <span class="footer-name">Blorp Tech LLC</span>
+    <span class="footer-name">Blorp Tech</span>
   </div>
 
   <div class="footer-meta">
-    © <span id="year"></span> Blorp Tech LLC — All Rights Reserved
+    © <span id="year"></span> Blorp Tech — All Rights Reserved
   </div>
 </footer>
 
