--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 <footer class="site-footer">
   <div class="footer-brand">
     <img
-      src="/blorp-icon-black.jpg"
+      src="/new-blorp-icon-black.jpg"
       alt="Blorp Tech"
       class="footer-logo"
     />
