--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <h1>Blorp Tech</h1>
 
   <p style="font-size:15px; margin:4px 0; color:#444;">
-    <strong>B.L.O.R.P. = Bridging Local Observations & Response Platform</strong>
+    <strong>B.L.O.R.P. - Bridging Local Observations & Response Platform</strong>
   </p>
 
   <p style="font-size:20px; margin:8px 0;">
@@ -109,7 +109,7 @@
   </p>
 
   <p>
-    Simple, reliable software for community safety, emergency response,
+    Reliable software for community safety, emergency response,
     and disaster coordination, designed for real-world conditions.
   </p>
 </header>
